Updated auth, category, subcategory, search, product modules and related files